--- a/DotNetCoreSqlDb/appsettings.json
+++ b/DotNetCoreSqlDb/appsettings.json
@@ -6,6 +6,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyDbConnection": "Server=(localdb)\\mssqllocaldb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "MyDbConnection": ""AZURE_SQL_CONNECTIONSTRING": "Data Source=<your-server-name>.database.windows.net,1433;Initial Catalog=coreDb;User ID=icon-admin;Password=vdEcU1otKMm4TCqoZvVY""
   }
 } 
+
+# Server=(localdb)\\mssqllocaldb;Trusted_Connection=True;MultipleActiveResultSets=true
