--- a/DotNetCoreSqlDb/appsettings.json
+++ b/DotNetCoreSqlDb/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyDbConnection": ""AZURE_SQL_CONNECTIONSTRING": "Data Source=<your-server-name>.database.windows.net,1433;Initial Catalog=coreDb;User ID=icon-admin;Password=vdEcU1otKMm4TCqoZvVY""
+    "MyDbConnection": ""AZURE_SQL_CONNECTIONSTRING": "Data Source=rnddbsvrdemo.database.windows.net,1433;Initial Catalog=coreDb;User ID=icon-admin;Password=vdEcU1otKMm4TCqoZvVY""
   }
 }
